<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/search"
        app:layout_constraintEnd_toStartOf="@+id/like"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginTop="120dp"
        android:text="@string/games"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/action"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/games"
        app:layout_constraintTop_toTopOf="@+id/games" />

    <Button
        android:id="@+id/adventure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/adventure"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/action"
        app:layout_constraintTop_toTopOf="@+id/action" />


    <Button
        android:id="@+id/console"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consoles"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/games"
        app:layout_constraintStart_toStartOf="@+id/games" />

    <Button
        android:id="@+id/fps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/fps"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/adventure"
        app:layout_constraintTop_toTopOf="@+id/adventure" />


    <Button
        android:id="@+id/story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/story"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/fps"
        app:layout_constraintTop_toTopOf="@+id/fps" />

    <Button
        android:id="@+id/survival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/survival"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/story"
        app:layout_constraintTop_toTopOf="@+id/story" />

    <Button
        android:id="@+id/racing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/racing"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/survival"
        app:layout_constraintTop_toTopOf="@+id/survival" />

    <TextView
        android:id="@+id/gameResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:scrollbars="vertical"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <TextView
        android:id="@+id/consolesResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:scrollbars="vertical"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <Button
        android:id="@+id/like"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dataInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Game Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/search"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/changeLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:text="@string/changeLang"
        android:textSize="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/racing" />


</androidx.constraintlayout.widget.ConstraintLayout>